Handle empty CSV file in reader