@@ -9,7 +9,6 @@ import org.springframework.stereotype.Component;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
 
 @Component
@@ -17,26 +16,33 @@ public class CsvBooksReader {
 
     private final CsvMapper mapper;
     private final Path booksFile;
-    private final CsvSchema schema;
+    private static final CsvSchema HEADER_SCHEMA = CsvSchema.builder()
+            .addColumn("id")
+            .addColumn("title")
+            .addColumn("author")
+            .addColumn("description")
+            .setUseHeader(true)
+            .build();
 
     public CsvBooksReader(CsvMapper mapper, Path booksFile) {
         this.mapper = mapper;
         this.booksFile = booksFile;
-        this.schema = CsvSchema.emptySchema().withHeader();
     }
 
     public List<Book> readAllBooks() {
-        if (Files.notExists(booksFile)) {
-            return Collections.emptyList();
-        }
+        try {
+            if (Files.notExists(booksFile) || Files.size(booksFile) == 0) {
+                return List.of();
+            }
 
-        try (var reader = Files.newBufferedReader(booksFile)) {
-            MappingIterator<Book> it =
-                    mapper.readerFor(Book.class)
-                            .with(schema)
-                            .readValues(reader);
+            try (var reader = Files.newBufferedReader(booksFile)) {
+                MappingIterator<Book> it = mapper
+                        .readerFor(Book.class)
+                        .with(HEADER_SCHEMA)
+                        .readValues(reader);
 
-            return it.readAll();
+                return it.readAll();
+            }
         } catch (IOException e) {
             throw new IllegalStateException("Failed to read books CSV", e);
         }
